--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">pagingpicker</string>
+    <string name="title_main">Gallery</string>
+    <string name="picker_image_empty">No images found.</string>
+
 </resources>
