nav_fragment 구조로 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="title_main">Gallery</string>
     <string name="picker_image_empty">No images found.</string>
     <string name="read_write_permission_rationale">The app needs read-write permission to show your phone image.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
